[Theme] Yanmin:fixed a issue about wrong z-index for firefox brower.

--- a/source/css/_partial/profile.styl
+++ b/source/css/_partial/profile.styl
@@ -142,7 +142,6 @@ a.icon-link
   position: absolute;
   top: -120%;
   left: 0
-  z-index: -1;
 
 .guider span:hover:before
   top: 0;
